--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "12.1.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "use-sound": "^4.0.1"
   },
   "devDependencies": {
     "eslint": "8.14.0",
