--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "next": "12.1.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-is": "^18.1.0",
+    "react-lottie": "^1.2.3",
     "styled-components": "^5.3.5",
     "use-sound": "^4.0.1"
   },
